dnl Process this file with autoconf to produce a configure script.
AC_INIT(api/api_test.C)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_APACHE
AC_PROG_MYSQL
AC_PROG_PHP

dnl Checks for libraries.
dnl Replace `main' with a function in -lgen:
AC_CHECK_LIB(gen, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, main)
dnl Replace `main' with a function in -lsocket:
AC_CHECK_LIB(socket, main)
dnl Replace `main' with a function in -lstdc:
AC_CHECK_LIB(stdc, main)
dnl Replace `main' with a function in -lz:
AC_CHECK_LIB(z, gzopen)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h malloc.h strings.h sys/time.h unistd.h sys/systeminfo.h sys/resource.h sys/types.h dirent.h sys/utsname.h netdb.h netinet/in.h arpa/inet.h signal.h sys/wait.h)
AC_CHECK_HEADERS(mysql/include/mysql_com.h mysql/mysql_com.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_VPRINTF
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gethostname gettimeofday mkdir select socket strstr uname)

AC_OUTPUT(apps/Makefile db/Makefile sched/Makefile lib/Makefile client/Makefile tools/Makefile Makefile api/Makefile)
